<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/GerirZonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="66dp"
        android:visibility="visible" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opt_manage_zone" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opt_exp_data" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GerirZonas"
        android:layout_below="@+id/GerirZonas"
        android:layout_marginTop="32dp"
        android:text="@string/btn_home" />

    <Button
        android:id="@+id/button2"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/btn_ok" />

    <TextView
        android:id="@+id/Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GerirZonas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_options"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>